--- a/app/views/int_stat_lens/index.html.erb
+++ b/app/views/int_stat_lens/index.html.erb
@@ -3,6 +3,97 @@
     Int stat lens
     <a href="/int_stat_lens/new" class="btn btn-lg btn-success">New Int stat len</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => collapse_search_form, :id => "int_stat_lens_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+  <%= f.label :dstopid, "Dstopid" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :dstopid_gteq, :class => "form-control", :placeholder => "Dstopid greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :dstopid_lteq, :class => "form-control", :placeholder => "Dstopid less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :distance, "Distance" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :distance_gteq, :class => "form-control", :placeholder => "Distance greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :distance_lteq, :class => "form-control", :placeholder => "Distance less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :astopid, "Astopid" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :astopid_gteq, :class => "form-control", :placeholder => "Astopid greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :astopid_lteq, :class => "form-control", :placeholder => "Astopid less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/int_stat_lens" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#int_stat_lens_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
