--- a/app/views/stop_data/index.html.erb
+++ b/app/views/stop_data/index.html.erb
@@ -3,6 +3,136 @@
     Stop data
     <a href="/stop_data/new" class="btn btn-lg btn-success">New Stop datum</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => collapse_search_form, :id => "stop_data_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+    <%= f.label :station_name_cont, "Station name contains" %>
+    <%= f.text_field :station_name_cont, :class => "form-control", :placeholder => "Station name contains" %>
+  </div>
+
+<div class="form-group">
+  <%= f.label :mileage, "Mileage" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :mileage_gteq, :class => "form-control", :placeholder => "Mileage greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :mileage_lteq, :class => "form-control", :placeholder => "Mileage less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+    <%= f.label :direction_id_cont, "Direction contains" %>
+    <%= f.text_field :direction_id_cont, :class => "form-control", :placeholder => "Direction contains" %>
+  </div>
+
+<div class="form-group">
+  <%= f.label :map_id, "Map" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :map_id_gteq, :class => "form-control", :placeholder => "Map greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :map_id_lteq, :class => "form-control", :placeholder => "Map less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :stop_id, "Stop" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :stop_id_gteq, :class => "form-control", :placeholder => "Stop greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :stop_id_lteq, :class => "form-control", :placeholder => "Stop less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :lat, "Lat" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :lat_gteq, :class => "form-control", :placeholder => "Lat greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :lat_lteq, :class => "form-control", :placeholder => "Lat less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :long, "Long" %>
+  <div class="row">
+    <div class='col-md-6 mb-1'>
+      <%= f.text_field :long_gteq, :class => "form-control", :placeholder => "Long greater than or equal to" %>
+    </div>
+    <div class='col-md-6'>
+      <%= f.text_field :long_lteq, :class => "form-control", :placeholder => "Long less than or equal to" %>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+    <%= f.label :stop_name_cont, "Stop name contains" %>
+    <%= f.text_field :stop_name_cont, :class => "form-control", :placeholder => "Stop name contains" %>
+  </div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/stop_data" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#stop_data_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
