--- a/app/views/time_tables/index.html.erb
+++ b/app/views/time_tables/index.html.erb
@@ -3,6 +3,193 @@
     Time tables
     <a href="/time_tables/new" class="btn btn-lg btn-success">New Time table</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => collapse_search_form, :id => "time_tables_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+    <%= f.label :train_number_cont, "Train number contains" %>
+    <%= f.text_field :train_number_cont, :class => "form-control", :placeholder => "Train number contains" %>
+  </div>
+
+<div class="form-group">
+          <%= f.label :date, "Date" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='dategteqPicker'>
+                  <%= f.text_field :date_gteq, :class => "form-control", :placeholder => "Date greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='datelteqPicker'>
+                  <%= f.text_field :date_lteq, :class => "form-control", :placeholder => "Date less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#dategteqPicker').datetimepicker({
+                  format: 'MM/DD/YYYY'
+              });
+              $('#datelteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'MM/DD/YYYY'
+              });
+              $('#dategteqPicker').on("dp.change", function (e) {
+                  $('#datelteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#datelteqPicker').on("dp.change", function (e) {
+                  $('#dategteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+<div class="form-group">
+    <%= f.label :stop_id_cont, "Stop contains" %>
+    <%= f.text_field :stop_id_cont, :class => "form-control", :placeholder => "Stop contains" %>
+  </div>
+
+<div class="form-group">
+        <%= f.label :departure_time, "Departure time" %>
+        <div class="row">
+          <div class='col-md-6 mb-1'>
+            <div class='input-group date' id='departure_timegteqPicker'>
+              <%= f.text_field :departure_time_gteq, :class => "form-control", :placeholder => "Departure time greater than or equal to" %>
+              <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-time"></span>
+              </span>
+              <script type="text/javascript">
+                $(function () {
+                    $('#departure_timegteqPicker').datetimepicker({
+                      format: 'LT'
+                    });
+                });
+              </script>
+            </div>
+          </div>
+          <div class='col-md-6'>
+            <div class='input-group date' id='departure_timelteqPicker'>
+              <%= f.text_field :departure_time_lteq, :class => "form-control", :placeholder => "Departure time less than or equal to" %>
+              <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-time"></span>
+              </span>
+              <script type="text/javascript">
+                $(function () {
+                    $('#departure_timelteqPicker').datetimepicker({
+                      format: 'LT'
+                    });
+                });
+              </script>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<div class="form-group">
+        <%= f.label :arrival_time, "Arrival time" %>
+        <div class="row">
+          <div class='col-md-6 mb-1'>
+            <div class='input-group date' id='arrival_timegteqPicker'>
+              <%= f.text_field :arrival_time_gteq, :class => "form-control", :placeholder => "Arrival time greater than or equal to" %>
+              <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-time"></span>
+              </span>
+              <script type="text/javascript">
+                $(function () {
+                    $('#arrival_timegteqPicker').datetimepicker({
+                      format: 'LT'
+                    });
+                });
+              </script>
+            </div>
+          </div>
+          <div class='col-md-6'>
+            <div class='input-group date' id='arrival_timelteqPicker'>
+              <%= f.text_field :arrival_time_lteq, :class => "form-control", :placeholder => "Arrival time less than or equal to" %>
+              <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-time"></span>
+              </span>
+              <script type="text/javascript">
+                $(function () {
+                    $('#arrival_timelteqPicker').datetimepicker({
+                      format: 'LT'
+                    });
+                });
+              </script>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<div class="form-group">
+    <%= f.label :stop_name_cont, "Stop name contains" %>
+    <%= f.text_field :stop_name_cont, :class => "form-control", :placeholder => "Stop name contains" %>
+  </div>
+
+<div class="form-group">
+    <%= f.label :station_name_cont, "Station name contains" %>
+    <%= f.text_field :station_name_cont, :class => "form-control", :placeholder => "Station name contains" %>
+  </div>
+
+<div class="form-group">
+          <%= f.label :created_at, "Created at" %>
+          <div class="row">
+            <div class='col-md-6 mb-1'>
+              <div class='input-group date' id='created_atgteqPicker'>
+                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+
+            <div class='col-md-6'>
+              <div class='input-group date' id='created_atlteqPicker'>
+                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                  <span class="input-group-addon">
+                      <span class="glyphicon glyphicon-calendar"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+      </div>
+      <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atlteqPicker').datetimepicker({
+                  useCurrent: false,
+                  format: 'YYYY-MM-DD hh:mm:SS'
+              });
+              $('#created_atgteqPicker').on("dp.change", function (e) {
+                  $('#created_atlteqPicker').data("DateTimePicker").minDate(e.date);
+              });
+              $('#created_atlteqPicker').on("dp.change", function (e) {
+                  $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
+              });
+          });
+      </script>
+
+        
+
+      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+
+      <a href="/time_tables" class="btn btn-default btn-block mb-1">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#time_tables_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
